# ai_learning_support_backend

./: .env  .gitignore  AGENTS.md  BACKEND_API_REFERENCE.md  LICENSE  README.md  docker-compose.yml
ai-learning-support-rag-api/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai-learning-support-rag-api/app/: main.py
ai-learning-support-rag-api/app/api/v1/: retrieve.py  upload.py
ai-learning-support-rag-api/app/core/: config.py  security.py
ai-learning-support-rag-api/app/db/: qdrant_client.py
ai-learning-support-rag-api/app/schemas/: retrieve.py  upload.py
ai-learning-support-rag-api/app/services/: chunker.py  embeddings.py  ingestion_pipeline.py  local_storage.py  pdf_parser.py  pdf_processor.py  vector_db.py  vector_store.py  vision_service.py
ai-learning-support-rag-api/app/static/: rag_test_app.html  retrieve_test_ui.html
ai-learning-support-rag-api/app/templates/: index.html
ai-learning-support-rag-api/tests/: test_multi_tenant_isolation.py  test_pdf_processor.py  test_retrieve.py  test_upload.py
app/: main.py
app/llm/: agent_service.py  llm_service.py  prompt_builder.py  schemas.py
llm_api/: .env.example  Dockerfile  README.md  pyproject.toml
llm_api/app/: main.py
llm_api/app/llm/: .gitignore  llm_service.py  prompt_builder.py  schemas.py  test_data.py
